@@ -69,4 +69,5 @@
 30-May-2021 V0.77 Disable Pfam annotation from SIFTS
 19-Jun-2021 V0.78 Add ChemRefMappingProvider(), modernize ChemRefExtractor(), and update __docformat__
 28-Jun-2021 V0.79 Add LigandNeighborMappingProvider() LigandNeighborMappingExtractor() and associated tests
+30-Jun-2021 V0.80 GlycanProvider() a subclass of StashableBase(), add GlycanEtlWorkflow() and associated tests
 
